--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                             <div class="image-placeholder">
                                 <i class="text-dark">Có nợ mà không trả thích hẹn dây dưa , lúc mượn thì nhanh lẹ lắm lúc trả thì hẹn lên hẹn xuống dắt như gì , ae chú ý ạ !</i>
                                 <div class="placeholder-text">
-                                   <img src="images/Ảnh màn hình 2025-07-19 lúc 00.10.10.png" alt="mo_ta_anh" width="100%" height="50%">
+                                   <img src="images/phap.png" alt="mo_ta_anh" width="100%" height="50%">
                                 </div>
                             </div>
 
