--- a/index.html
+++ b/index.html
@@ -252,13 +252,21 @@
                             </div>
                         </div>
                     </div>
+                                        <div class="transaction-item">
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div>
+                                <div class="transaction-amount">+1,000,000 VND</div>
+                                <div class="text-white">Chuyển khoản từ NGUYEN VAN TONG</div>
+                                <div class="transaction-time">16:31 - 20/08/2025</div>
+                            </div>
+                            <div class="text-success">
+                                <i class="fas fa-check-circle fa-2x"></i>
+                            </div>
+                        </div>
+                    </div>
 
                 
                     <hr style="border-color: rgba(255,255,255,0.2);">
-                    <div class="text-center">
-                        <div class="text-white-50">Tổng giao dịch trong ngày</div>
-                        <div class="transaction-amount" style="font-size: 1.5rem;">+1,000,000 VND</div>
-                    </div>
                 </div>
                 <div class="modal-footer" style="border-top: 1px solid rgba(255,255,255,0.2);">
                     <button type="button" class="btn btn-light" data-bs-dismiss="modal">
